tagging performance fix [8085 + error while closing]